--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
 annotated-types==0.6.0
 anyio==3.7.1
+astroid==2.4.2
+colorama==0.4.3
 exceptiongroup==1.2.0
 fastapi==0.104.1
 idna==3.6
+isort==4.3.21
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+numpy==1.24.4
 pydantic==2.5.2
 pydantic-core==2.14.5
+pylint==2.5.3
+six==1.15.0
 sniffio==1.3.0
 starlette==0.27.0
+toml==0.10.1
 typing-extensions==4.8.0
+wrapt==1.12.1
